--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -28,6 +28,10 @@
 .links img {
     height: 35px;
     filter: brightness(1000%);
+    transition: all 0.3s ease;
+}
+.links img:hover {
+    transform: scale(1.2);
 }
 
 
