--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -38,7 +38,6 @@
     text-decoration: none;
     font-size: 1.8rem;
     color: black;
-    border-bottom: 2px solid white;
 
     transition: all 0.1s ease 0s;
 }
@@ -76,14 +75,23 @@
     top: 25px;
 
     font-weight: bold;
-    font-size: 36px;
+    font-size: 3.5rem;
 
     cursor: pointer;
+}
+.mobileLangSwitcher {
+    font-size: 2.4rem!important;
+    font-weight: 600;
+
+    cursor: pointer;
+}
+.mobileLangSwitcher:hover {
+    color: black!important;
 }
 .modalMobile a {
     text-decoration: none;
     color: black;
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: 600;
 }
 
@@ -97,6 +105,9 @@
     }
     .header a {
         display: none;
+    }
+    .langSwitcher {
+        display: none!important;
     }
 
     .modalMobile {
