--- a/src/components/projectCard/ProjectCard.module.css
+++ b/src/components/projectCard/ProjectCard.module.css
@@ -6,8 +6,8 @@
     justify-content: space-between;
 
     width: 100%;
-    height: 400px;
-    min-height: 400px;
+    height: 50rem;
+    min-height: 50rem;
 
     background-color: white;
     border-radius: 15px;
@@ -21,40 +21,58 @@
 
     border-radius: 10px;
 
-    box-shadow: 0 0 10px 5px rgba(0,0,0,0.05);
+    box-shadow: 0 0 15px 10px rgba(0,0,0,0.1);
+    overflow: hidden;
+
+    cursor: pointer;
 }
+.window:hover img {
+    transform: translateY(calc(-100% + 360px));
+}
+.window img {
+    position: relative;
+    transition: all 12s ease 0.2s;
+    width: 100%;
+}
+.showMobile {
+    display: none;
+    text-align: center;
+}
+
 .projectText {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-
-    padding: 20px 0;
+    justify-content: space-between;
+    gap: 1rem;
 
     width: 40%;
     height: 100%;
 }
 .projectText h1 {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
 }
 .projectText p {
+    font-size: 1.8rem;
     text-align: center;
 }
 .tags {
-    margin-top: auto;
+    margin: 2rem;
 
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 20px;
 }
 .tag {
-    padding: 5px 15px;
+    padding: 1rem 1.5rem;
 
     font-size: 1.6rem;
     width: fit-content;
     height: fit-content;
 
-    box-shadow: 0 0 10px 5px rgba(0,0,0,0.08);
+    border: 1px solid rgba(0,0,0,0.3);
+    user-select: none;
 }
 .options {
     margin-top: 20px;
@@ -88,10 +106,17 @@
 }
 
 @media (max-width: 980px) {
+    .showMobile {
+        display: block;
+    }
+    .hideMobile {
+        display: none;
+    }
     .projectCard {
         margin: 20px auto;
 
         flex-direction: column;
+        gap: 3rem;
 
         width: 100%;
 
@@ -102,7 +127,7 @@
     }
     .window {
         width: 100%;
-        height: fit-content;
+        height: 360px;
     }
     .projectText {
         width: 100%;
@@ -110,9 +135,18 @@
     .projectText h1 {
         margin-top: 20px;
     }
+    .tags {
+        gap: 1rem;
+    }
     .tag {
-        font-size: 1.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-size: 1.2rem;
         box-shadow: 0 0 8px 4px rgba(0,0,0,0.04);
+        width: 47%;
+        height: 5rem;
     }
     .options a {
         font-size: 1.6rem;
