--- a/src/pages/Main.module.css
+++ b/src/pages/Main.module.css
@@ -1,10 +1,19 @@
-.content{
-    margin-top: 80px;
+.wrapper {
+    padding-top: 80px;
 
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+
+    width: 100%;
+    height: 100vh;
+}
+.content {
     width: 100%;
     height: calc(100vh - 80px);
 
     overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 .content::-webkit-scrollbar {
     width: 10px;
@@ -13,9 +22,18 @@
 }
 .content::-webkit-scrollbar-thumb {
     background: var(--color-accent);
-    border-radius: 10px;
-    border: 2px solid white
 }
+
+.invisibleAnchor {
+    width: 100%;
+    height: 0;
+
+    pointer-events: none;
+    user-select: none;
+
+    z-index: 999999999999;
+}
+
 
 @media (max-width: 980px) {
     .content {
