--- a/src/components/projectCard/ProjectCard.module.css
+++ b/src/components/projectCard/ProjectCard.module.css
@@ -106,6 +106,9 @@
 }
 
 @media (max-width: 980px) {
+    .projectCard:not(:last-child) {
+        border-bottom: 1px solid rgba(0,0,0,0.3);
+    }
     .showMobile {
         display: block;
     }
