--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -37,6 +37,7 @@
 .header a {
     text-decoration: none;
     font-size: 1.8rem;
+    font-weight: 600;
     color: black;
 
     transition: all 0.1s ease 0s;
