--- a/src/components/projectCard/ProjectCard.module.css
+++ b/src/components/projectCard/ProjectCard.module.css
@@ -73,6 +73,11 @@
 
     border: 1px solid rgba(0,0,0,0.3);
     user-select: none;
+    transition: all 0.2s ease 0s;
+}
+.tag:hover {
+    background-color: black;
+    color: white;
 }
 .options {
     margin-top: 20px;
